--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   video_player: ^2.9.1
   appinio_video_player: ^1.2.2
+  flutter_bloc: ^8.1.6
   
 
 dev_dependencies:
@@ -65,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/push-up.mp4
+  # assets:
+  #   - assets/push-up.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
